# vpype-vfab

./: .gitignore  AGENTS.md  CHANGELOG.md  CI_FIXES.md  DRY_REFACTORING_PRD.md  IMPLEMENTATION.md  LICENSE  PLLOTTY_MONITORING_PRD.md  README.md  debug_monitor.py  pyproject.toml  test_functionality.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api-reference.md  basic-usage.md  configuration.md  getting-started.md  index.md  quickstart.md  troubleshooting.md  usage_guide.md
examples/: README_generate_a4_plots.md  batch_processing.py  generate_vsketch_plots.py  standalone_usage.py  vsketch_integration.py
tests/: __init__.py  conftest.py  test_base_qt_free.py  test_commands.py  test_commands_direct.py  test_commands_integration.py  test_commands_monitor.py  test_commands_qt_free.py  test_commands_streamlined.py  test_commands_unit.py  test_comprehensive_coverage.py  test_config.py  test_config_enhanced.py  test_config_qt_free.py  test_database.py  test_database_direct.py  test_database_enhanced.py  test_database_qt_free.py  test_database_simple.py  test_database_streamlined.py  test_exceptions.py  test_exceptions_qt_free.py  test_functionality.py  test_monitor.py  test_monitor_coverage.py  test_monitor_direct.py  test_monitor_direct_simple.py  test_monitor_qt_free.py  test_monitor_simple_corrected.py  test_utils.py  test_utils_comprehensive.py  test_utils_coverage.py  test_utils_direct.py  test_utils_enhanced.py  test_utils_extended.py  test_utils_focused.py  test_utils_qt_free.py  test_utils_real.py  test_utils_standalone.py  test_websocket_integration.py
tests/integration/: __init__.py  test_end_to_end_workflow.py  test_vsketch_quickdraw.py  test_vsketch_schotter.py
tests/performance/: __init__.py  test_concurrency.py
tests/scenarios/: __init__.py
vpype_plotty/: __init__.py  base.py  commands.py  config.py  database.py  decorators.py  exceptions.py  monitor.py  utils.py
vpype_plotty/websocket/: __init__.py  client.py  monitor.py  schemas.py
vpype_vfab/: __init__.py  base.py  commands.py  config.py  database.py  decorators.py  exceptions.py  monitor.py  utils.py
workspace/: plotty.db  plotty.db-shm  plotty.db-wal
workspace/jobs/test_job/: job.json
workspace/queue/: test_job.notify
